test_suite/tests/ui/type-attribute/from.stderr
error: failed to parse type: from = "Option<T"
 --> tests/ui/type-attribute/from.rs:4:16
  |
4 | #[serde(from = "Option<T")]
  |                ^^^^^^^^^^
